plugins {
    id 'fabric-loom' version '0.9-SNAPSHOT'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '5.14.0'
    id 'com.matthewprenger.cursegradle' version '1.4.0'
    id "com.modrinth.minotaur" version "1.2.1"
}

apply plugin: 'java-library'

version = System.getenv("MI_VERSION")
        ? System.getenv("MI_VERSION")
        : "local"

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

repositories {
    // for KJS
    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    // for ARRP
    maven {
        url = 'https://raw.githubusercontent.com/Devan-Kerman/Devan-Repo/master/'
        content {
            includeGroup "net.devtech"
        }
    }
    // for Patchouli
    maven {
        url 'https://maven.blamejared.com'
    }
    // for WTHIT
    maven {
        url 'https://bai.jfrog.io/artifactory/maven'
    }
    // for AE2
    maven {
        name "Modmaven"
        url "https://modmaven.dev"
        content {
            includeGroup "appeng"
        }
    }
    maven {
        url "https://maven.shedaniel.me"
        content {
            includeGroup "me.shedaniel.cloth.api"
            includeGroup "me.sargunvohra.mcmods"
            includeGroup "me.shedaniel.cloth"
            includeGroup "me.shedaniel"
            includeGroup "dev.architectury"
        }
    }
    maven {
        url "https://maven.quiltmc.org" // alternative to terraformers' shitty maven
        content {
            includeGroup "com.terraformersmc"
        }
    }
    // for DashLoader
    maven {
        name "DashLoader"
        url 'https://maven.oskarstrom.net'
        content {
            includeGroup "net.oskarstrom"
        }
    }
    // for Astromine, KJS and Indrev, and api-provider
    maven {
        name 'Jitpack for MI'
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.KubeJS-Mods"
            includeGroup "com.github.Mixinors.Astromine"
            includeGroup "com.github.GabrielOlvH"
            includeGroup "com.github.Technici4n"
            /* To build indrev */
            includeGroup "com.github.Draylar"
            /* To build astromine */
            includeGroup "com.github.vini2003"
            includeGroup "com.github.Shnupbups"
            /* Curse Forge API */
            includeGroup "com.github.TheRandomLabs"
        }
    }
    // to build indrev
    maven {
        name = "CottonMC"
        url = "https://server.bbkr.space/artifactory/libs-release"
        content {
            includeGroup "io.github.cottonmc"
        }
    }
    maven {
        name = "dblsaiko"
        url = "https://maven.dblsaiko.net/"
    }
    maven {
        name = "Technici4n"
        url = "https://raw.githubusercontent.com/Technici4n/Technici4n-maven/master/"
        content {
            includeGroup "net.fabricmc.fabric-api"
            includeGroup "dev.technici4n"
            includeGroup "dev.latvian.mods"
        }
    }
    maven {
        url "https://maven.saps.dev/minecraft"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.ftb.mods"
        }
    }
    // for reach entity attributes, required by Magna
    maven {
        url = "https://maven.jamieswhiteshirt.com/libs-release/"
        content {
            includeGroup "com.jamieswhiteshirt"
        }
    }
    mavenLocal()

}

dependencies {
    // Why does this keep happening? :(
    include modImplementation("net.fabricmc.fabric-api:fabric-transfer-api-v1:1.3.1+b619975d18")

    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Dependencies
    include modImplementation("net.devtech:arrp:${project.arrp_version}")
    modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
    include modImplementation("vazkii.patchouli:Patchouli:${project.patchouli_version}")

    include modApi("me.shedaniel.cloth.api:cloth-armor-api-v1:${project.cloth_api_version}")
    include modApi("me.shedaniel.cloth.api:cloth-common-events-v1:${project.cloth_api_version}")

    include modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")

    modRuntime modImplementation("mcp.mobius.waila:wthit:fabric-${project.wthit_version}")

    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
    modImplementation "dev.latvian.mods:kubejs-fabric:1605.3.10-build.9999"

    include modImplementation("com.github.Draylar:magna:${project.magna_version}") {
        exclude(group: "io.github.prospector")
        exclude(group: "me.shedaniel.cloth")
    }

    include modApi("dev.technici4n:FastTransferLib:${project.ftl_version}")
    include modApi("teamreborn:energy:${project.tr_energy_version}")

    modCompileOnly('net.oskarstrom:DashLoader:2.1-dev4') {
        exclude(group: "net.fabricmc.fabric-api")
    }


    // Other mods for testing purposes
    //modRuntime "appeng:appliedenergistics2-fabric:${project.appeng_version}"
    //modRuntime "com.github.Mixinors.Astromine:astromine:${project.astromine_commit}"
    //modRuntime ("com.github.GabrielOlvH:Industrial-Revolution:${project.indrev_commit}") {
    //    exclude group: "teamreborn", module: "energy"
    //}
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

loom {
    runs {
        autoTestServer {
            server()
            ideConfigGenerated project.rootProject == project
            name = "Autotest Server"
            source sourceSets.main
            vmArg "-Dmodern_industrialization.autoTest"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    it.options.encoding = "UTF-8"

    // Minecraft 1.17 (21w19a) upwards uses Java 16.
    it.options.release = 16
}

// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
// if it is present.
// If you remove this task, sources will not be generated.
task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = "sources"
    from sourceSets.main.allSource
}

jar {
    from "LICENSE"
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            // add all the jars that should be included when publishing to maven
            artifact(remapJar) {
                builtBy remapJar
            }
            artifact(sourcesJar) {
                builtBy remapSourcesJar
            }
        }
    }

    // select the repositories you want to publish to
    repositories {
        // uncomment to publish to the local maven
        // mavenLocal()
    }
}

spotless {
    format 'misc', {
        target '*.gradle', '*.md', '.gitignore'

        trimTrailingWhitespace()
        indentWithSpaces()
        endWithNewline()
    }
    java {
        targetExclude '**/MIFluids.java', '**/MIMaterials.java', '**/MIOreGenerators.java', '**/MITags.java'
        targetExclude '**/MIMachineRecipeTypes.java', '**/SingleBlockCraftingMachines.java', '**/MultiblockMachines.java'

        importOrder()

        removeUnusedImports()

        eclipse().configFile('eclipse-format.xml')

        indentWithSpaces()
        endWithNewline()
        licenseHeaderFile 'LICENSE.java'
    }
    format 'json', {
        target 'src/**/lang/*.json'
        addStep(JsonOrderStep.create())
    }
}

import com.diffplug.spotless.FormatterFunc
import com.diffplug.spotless.FormatterStep
import com.google.gson.Gson
import com.google.gson.GsonBuilder

final class JsonOrderStep {
    private JsonOrderStep() {}
    private static final Gson GSON = new GsonBuilder().disableHtmlEscaping().setLenient().setPrettyPrinting().create();

    static FormatterStep create() {
        return FormatterStep.create(
                'jsonOrderStep',
                new State(),
                {
                    new FormatterFunc() {
                        String apply(String input) {
                            TreeMap<String, Object> jsonMap = GSON.fromJson(input, TreeMap.class);
                            String sortedJson = GSON.toJson(jsonMap);
                            String prettyPrinted = sortedJson.replace('  "', '    "').replace('\\u0027', '\'');
                            return prettyPrinted;
                        }
                    }
                },
        );
    }

    private static final class State implements Serializable {
        private static final long serialVersionUID = 1L;

        private final int formatVersion = 1;
    }
}

def releaseChannel = "beta"
def changelog = "Please visit our github repository for a changelog: https://github.com/AztechMC/Modern-Industrialization/releases."
if (version.toLowerCase().contains("alpha")) {
    releaseChannel = "alpha"
    changelog = "THIS IS AN ALPHA RELEASE, MAKE A BACKUP BEFORE INSTALLING AND FREQUENTLY WHILE PLAYING, AND PLEASE REPORT ANY ISSUE YOU MAY FIND ON OUR ISSUE TRACKER.\n\n" + changelog
}

// Publishing
if (System.getenv("CURSEFORGE_API_KEY") && !version.endsWith("-SNAPSHOT")) {
    curseforge {
        apiKey = System.getenv().get("CURSEFORGE_API_KEY")
        project {
            id = project.curseforge_project
            releaseType = releaseChannel
            changelogType = "markdown"
            delegate.changelog = changelog

            addGameVersion "1.17.1"
            addGameVersion "Fabric"
            addGameVersion "Java 16"

            relations {
                requiredDependency "fabric-api"
                requiredDependency "roughly-enough-items"
                optionalDependency "wthit"
                embeddedLibrary "auto-config-updated-api"
                embeddedLibrary "patchouli-fabric"
            }
            mainArtifact(remapJar.archiveFile) {
                displayName = "Modern Industrialization v${version}"
            }
        }
        options {
            forgeGradleIntegration = false
        }
        afterEvaluate {
            tasks.getByName("curseforge${project.curseforge_project}").dependsOn remapJar
        }
    }
}

import com.modrinth.minotaur.TaskModrinthUpload

task publishModrinth (type: TaskModrinthUpload){
    onlyIf {
        System.getenv("MODRINTH_API_KEY") && !version.endsWith("-SNAPSHOT")
    }
    token = System.getenv("MODRINTH_API_KEY")
    projectId = project.modrinth_project
    versionNumber = version
    versionName = "Modern Industrialization v${version}"
    delegate.changelog = changelog
    versionType = releaseChannel.toUpperCase()
    uploadFile = remapJar.archiveFile
    addGameVersion "1.17.1"
    addLoader "fabric"
}
